--- a/src/editor.scss
+++ b/src/editor.scss
@@ -6,8 +6,10 @@
 
 .post-type-page .editor-styles-wrapper {
 	p.wp-block-rrze-co2-emissions-calculator {
-		padding: 1em;
-		background: var(--color-ContentRegions, #f5f7f9);
+		padding: 2em 2em 2em 12em;
+		background: #F6F6F6 url('../assets/img/chart.svg') no-repeat;
+		background-size: contain;
 		border: 1px solid var(--color-ContentBorders, #dfe6ec);
+		color: #353535;
 	}
 }
